<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_more"
    android:layout_gravity="center"
    android:background="?attr/bgc">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--    Change Language    -->

            <TextView
                android:id="@+id/txt_change_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/km_text"
                android:textSize="18sp"
                android:fontFamily="@font/karma_light"
                android:layout_marginBottom="5dp"
                android:textColor="?attr/tc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/layoutradius"
                android:gravity="center"
                >
                <RadioGroup
                    android:id="@+id/rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/txt_en"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/english"
                        android:fontFamily="@font/karma_light"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/txt_kh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/khmer"
                        android:fontFamily="@font/karma_light"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        />

                </RadioGroup>


            </LinearLayout>

            <!-- Change Theme Mode -->


            <!-- Social Media -->
            <TextView
                android:id="@+id/txt_social_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/social_media"
                android:textSize="18sp"
                android:fontFamily="@font/karma_light"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="?attr/tc"
                />
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                >
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/layoutradius"
                    android:gravity="center"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    >

                    <ImageButton
                        android:id="@+id/btn_fb"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginRight="20dp"
                        android:background="#00FFB21F"
                        android:src="@drawable/fb" />

                    <ImageButton
                        android:id="@+id/btn_ig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ig"
                        android:background="#00FFB21F"
                        android:layout_marginRight="20dp"
                        />

                    <ImageButton
                        android:id="@+id/btn_yt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/yt"
                        android:background="#00FFB21F"
                        android:layout_marginRight="20dp"
                        />
                    <ImageButton
                        android:id="@+id/btn_tele"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/telegram"
                        android:background="#00FFB21F"
                        android:layout_marginRight="20dp"
                        />
                    <ImageButton
                        android:id="@+id/btn_web"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00FFB21F"
                        android:src="@drawable/web"
                        />

                </LinearLayout>
            </HorizontalScrollView>

            <!-- Application FAQ -->
            <TextView
                android:id="@+id/txt_app_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/application_faq"
                android:textSize="18sp"
                android:fontFamily="@font/karma_light"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="?attr/tc"
                />
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:background="@drawable/layoutradius"
                android:gravity="center"
                android:layout_height="60dp">
                <TextView

                    android:id="@+id/txt_faq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/frequently_ask_question"
                    android:fontFamily="@font/karma_light"
                    android:textColor="#000000"
                    android:textSize="16sp"
                   />

            </LinearLayout>

            <!-- About US -->
            <TextView
                android:id="@+id/txt_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/about_us"
                android:textSize="18sp"
                android:fontFamily="@font/karma_light"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="?attr/tc"
                />
            <LinearLayout

                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:background="@drawable/layoutradius"
                android:gravity="center"
                android:layout_height="60dp">
                <TextView
                    android:id="@+id/btn_our_vision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/our_vision"
                    android:fontFamily="@font/karma_light"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    />

            </LinearLayout>

            <!-- Location -->

            <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/txt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/location"
                android:textSize="18sp"
                android:fontFamily="@font/karma_light"
                android:textColor="?attr/tc" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:background="@drawable/layoutradius"
                android:layout_height="60dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:gravity="center">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/txt_location_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/karma_light"
                        android:text="@string/location_text"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/img_location"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/map" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>